--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </select>
             </div>
             <div class="group">
-                <p>Or some circle.. mmm??</p>
+                <p id="p-rb">Or some circle.. mmm??</p>
                 <label class="c22">1
                     <input id="circle-one" value='1' name="we tied" type="radio" />
                 </label>
@@ -70,7 +70,8 @@
             </div>
             <div class="group">
                 <p>Prove you can type:</p>
-                <textarea></textarea>
+                <textarea placeholder="COME ON!!">
+            </textarea>
             </div>
             <button id="submit">Year, Push Me!!</button>
 
