make placeholder shown in textarea

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="group">
                 <p>How about select some word?</p>
                 <select name='someWord' id="dropdown">
-                    <option>Aaaa</option>
-                    <option>Bbb</option>
-                    <option>Ccccc</option>
-                    <option>Dd</option>
-                    <option>Eet's not a word!</option>
+                    <option>AaAa</option>
+                    <option>BbB</option>
+                    <option>CCccc</option>
+                    <option>dD</option>
+                    <option>Eeet's not a word!</option>
                     <option>F</option>
                 </select>
             </div>
@@ -71,8 +71,7 @@
             <div class="group">
                 <p>Prove you can type:</p>
                 <textarea name="textarea"
-                placeholder="COME ON!!">
-            </textarea>
+                placeholder="COME ON!!"></textarea>
             </div>
             <button id="submit">Year, Push Me!!</button>
 
